@@ -17,7 +17,9 @@ type = FN
 usage = Input file with volume to be scaled to match
 tooltip =
 manpage = Input file with volume to be scaled to match.  This
-file can be entered on the command line as the second non-option argument. 
+file can be entered on the command line as the second non-option argument, or
+as the first non-option argument if \fB-target\fR is entered instead of a
+reference file.
 
 [Field = OutputFile]
 short = output
@@ -26,9 +28,31 @@ type = FN
 usage = Output file for scaled volume (omit to rewrite input file)
 tooltip =
 manpage = Output file for the scaled volume.  This
-file can be entered on the command line as the third non-option argument. 
-If this file is omitted, the
+file can be entered on the command line as the third non-option argument, or
+the second non-option argument if \fB-target\fR is entered instead of a
+reference file.  If this file is omitted, the
 program will write the scaled values back to the input file.
+
+[Field = TargetMeanAndSD]
+short = target
+type = FP
+usage = Mean and SD to scale volume to (omit the reference volume)
+tooltip = 
+manpage = Mean and standard deviation to scale the volume to (the one entered
+with \fB-scaled\fR).  The reference file is not entered in this case.  If you
+have a byte or integer image file and you want to scale to a small target SD
+value (such as 1, as opposed to 40), then you need to change the mode of the
+output file to floating point.
+
+[Field = ModeToOutput]
+short = mode
+type = I
+usage = Storage mode of output file; 0 for byte, 1 or 6 for integer, 2 for real
+tooltip = 
+manpage = The storage mode of the output file; 0 for byte, 1 for 16-bit 
+signed integer, 6 for 16-bit unsigned integer, or 2 for 32-bit floating point.
+The default is the mode of the input file.  This entry is allowed only when
+writing to a new output file.
 
 [Field = ReportOnly]
 short = report
@@ -46,8 +70,10 @@ type = IP
 usage = Starting and ending X coordinates of region to analyze in reference
 tooltip = 
 manpage = Starting and ending X coordinates of region to analyze for mean and
-SD in reference volume.  The default is NX/4, 3*NX/4, where NX is the size of
-the reference volume in X.  X, Y, and Z coordinates are numbered from 0.
+SD in reference volume.  An ending X of 0 will be converted to NX - 1, so 0,0
+can be entered to use the full extent in X. The default is NX/4, 3*NX/4, where
+NX is the size of the scaled volume in X.  X, Y, and Z coordinates are
+numbered from 0.
 
 [Field = YMinAndMax]
 short = yminmax
@@ -55,8 +81,8 @@ type = IP
 usage = Starting and ending Y coordinates of region to analyze in reference
 tooltip = 
 manpage = Starting and ending Y coordinates of region to analyze in reference
-volume.  The default is NY/4, 3*NY/4, where NY is the size of
-the reference volume in Y.
+volume.  An ending Y of 0 will be converted to NY - 1.  The default is NY/4,
+3*NY/4, where NY is the size of the scaled volume in Y.
 
 [Field = ZMinAndMax]
 short = zminmax
@@ -64,8 +90,20 @@ type = IP
 usage = Starting and ending Z coordinates of region to analyze in reference
 tooltip = 
 manpage = Starting and ending Z values of region to analyze in reference
-volume.  The default is NZ/4, 3*NZ/4, where NZ is the number of slices in
-the reference volume.
+volume.  An ending Z of 0 will be converted to NZ - 1. The default is NZ/4,
+3*NZ/4, where NZ is the number of slices in the scaled volume.
+
+[Field = UseAllPixels]
+short = all
+type = B
+usage = Compute mean and SD from all pixels in the files
+tooltip = 
+manpage = Compute mean and SD from all pixels in the files, not from a sample
+of pixels.  With this option, it is not necessary or allowed to enter any minimum and
+maximum coordinates.  Use this option to get an exact match to target values
+for small volumes (say, several megapixels).  For larger volumes, use "-xm 0,0
+-ym 0,0 -zm 0,0" instead to sample the entire volume, unless you really need a precise
+match; with sampling, the SD will be accurate to within about 0.2%.
 
 [Field = OffsetRefToScaledXYZ]
 short = offset
